--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.132.0",
     "@aws-cdk/aws-ecs": "^1.132.0",
     "@aws-cdk/aws-sqs": "^1.132.0",
     "@aws-cdk/core": "1.132.0",
